Thu Oct 29 22:55:05 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/README:
        * docs/html/MakeProjectCreator.html:
        * modules/ProjectCreator.pm:

          Added the current language as a property.  So, prop:cplusplus, for
          example, can be used within a 'specific' scope.

        * docs/USAGE:
        * modules/Options.pm:

          Minor change.  Separated languages using commas in usage.

Wed Oct 28 16:00:03 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * templates/make.mpd:

          If a custom 'dependent' setting contains a double quote, then we
          must make a fake rule that corresponds to it.  Otherwise, make
          doesn't know how to deal with it.

Fri Oct 23 09:49:30 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Wrap the command with quotes because NDDSHOME could contain spaces

Wed Oct 21 19:29:58 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * docs/templates/make.txt:
        * templates/make.mpd:

          Modified to allow the user to override the 'touch' command via
          -value_template.  For example, if you're using GNU make on Windows
          you may want to replace 'touch' with 'copy nul' (e.g, mwc.pl
          -value_template "touch=copy nul").

        * templates/vc8.mpd:

          Replaced spaces with tabs so that the generated project is more
          like ones created by Visual Studio.

Tue Oct 20 06:31:30 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Don't wrap the command with quotes, that breaks on linux

Mon Oct 19 12:05:30 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * config/ndds_ts_defaults.mpb:
          Wrap the command with quotes

Fri Oct 16 17:42:30 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * templates/vc7.mpd:
        * templates/vc8.mpd:

          Reverted changes (r1646):