@@ -1,3 +1,10 @@
+Mon Nov  2 13:35:00 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/WorkspaceCreator.pm:
+
+          Fixed a bug where an MPC file used in more than one aggregated
+          workspace wouldn't be ignored.
+
 Thu Oct 29 22:55:05 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>
 
         * docs/README:
